[package]
name = "docx-to-html"
version = "0.4.0"
repository = "https://github.com/scuderia-fe/docx-to-html"
authors = ["Alessio Marchi <65831826+kettei-sproutty@users.noreply.github.com>"]
description = "Converts a docx file to html"
license = "MIT"
edition = "2018"

[lib]
name = "docx_to_html"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
docx-rs = "0.4.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
